# phxargs

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  TODO.md  phxargs.iwyu.imp  xargs.c
.github/workflows/: ci.yml
cmake/: llvm-cov-gcov.sh
cmake/Modules/: CheckConfig.cmake
man/: phxargs.1.md
src/: appender_mode.c  appender_mode.h  arg_source.c  arg_source.h  buffer.c  buffer.h  command.c  command.h  command_args.c  command_args.h  delim_tokenizer.c  delim_tokenizer.h  execution_context.c  execution_context.h  exit_codes.h  main.c  null_sep_tokenizer.c  null_sep_tokenizer.h  options.c  options.h  phxargs.c  process_pool.c  process_pool.h  replacer_mode.c  replacer_mode.h  space_tokenizer.c  space_tokenizer.h  str.c  str.h  tokenizer.c  tokenizer.h  util.c  util.h  xargs.c  xargs.h  xargs_mode.c  xargs_mode.h
tests/: dispatch-failure.sh  echo-unless-two.sh  exit-255.sh  fuzz_delim_tokenizer.c  fuzz_space_tokenizer.c  open-tty-script.sh  run-expected-output-comparison-test.sh  run-interactive-test-prompt.exp  run-interactive-test.exp  run-unordered-output-comparison-test.sh  run-xargs-output-comparison-test.sh  run_xargs_output_comparison_test.sh  self-sigterm.sh  set-test-context.sh  set_test_context.sh  test-arg-file-empty-with-r.sh  test-arg-file-empty.sh  test-arg-file-not-found.sh  test-arg-file-not-readable.sh  test-arg-file.sh  test-arg-replacement-longer-input.sh  test-arg-replacement-many-args-per-line.sh  test-arg-replacement-multiple-placeholders.sh  test-arg-replacement-no-input.sh  test-arg-replacement-no-placeholder.sh  test-arg-replacement-normal-text-placeholder.sh  test-arg-replacement-special-characters.sh  test-arg-replacement-with-bang-delimiter.sh  test-arg-replacement-with-continued-lines.sh  test-arg-replacement-with-nul-delimiter.sh  test-arg-too-long.sh  test-basic-arg-replacement.sh  test-basic-open-tty-mode.exp  test-basic-prompt-mode.exp  test-basic-prompt-mode.sh  test-basic-trace-mode.sh  test-command-not-executable.sh  test-command-not-found.sh  test-compat.sh  test-echo-2-args-max.sh  (+127 more)
tests/corpus/delim_tokenizer/: comma_delimited  long_token  no_trailing_delim  token_at_boundary
tests/corpus/space_tokenizer/: backslash_escape  mid_token_quote
tests/seeds/delim_tokenizer/: colon-basic  colon-paths  comma-basic  comma-empty-token  comma-leading-empty  comma-quoted-content  comma-trailing-empty  delimiter-in-content  high-byte-delimiter  long-single-token  many-short-tokens  newline-empty-token  nul-basic  pipe-basic  space-basic  space-double
tests/seeds/space_tokenizer/: backslash-backslash  backslash-quote  backslash-space  eof-marker-default  eof-marker-on-own-line  leading-trailing-spaces  many-short-tokens  mixed-quoted  mixed-whitespace  quoted-with-newline  tab-delimited
